--- a/_includes/car/header.html
+++ b/_includes/car/header.html
@@ -52,8 +52,8 @@
 								</div>
 							</li>
 							<li><a href="{{ site.url }}/car/old/"><div>Xe cũ</div></a></li>
-							<li><a href="{{ site.url }}/car/accessories/"><div>Phụ kiện</div></a></li>
-							<li><a href="{{ site.url }}/car/faqs/"><div>Câu hỏi thường gặp</div></a></li>
+							<!--li><a href="{{ site.url }}/car/accessories/"><div>Phụ kiện</div></a></li-->
+							<!--li><a href="{{ site.url }}/car/faqs/"><div>Câu hỏi thường gặp</div></a></li-->
 							<li><a href="{{ site.url }}/car/blog/"><div>Tin tức</div></a></li>
 							<li><a href="{{ site.url }}/car/contact/"><div>Liên hệ</div></a></li>
 						</ul>
