--- a/_includes/car/header.html
+++ b/_includes/car/header.html
@@ -19,7 +19,7 @@
 					============================================= -->
 					<nav id="primary-menu" class="with-arrows clearfix">
 						<ul>
-							<li class="current"><a href="{{ site.url }}/car/"><div>Trang chủ</div></a></li>
+							<li class="current"><a href="{{ site.url }}/car/"><div>Toyota Thái Hòa</div></a></li>
 							<!--li><a href="{{ site.url }}/car/list/"><div>Danh sách xe</div></a></li-->
 							<!-- Mega Menu -->
 							<li class="mega-menu"><a href="{{ site.url }}/car/new/"><div>Xe mới</div></a>
